Small fix to horizontal issue on mobile

--- a/main.css
+++ b/main.css
@@ -114,7 +114,7 @@ header{
     width: 100%;
     height: 100vh;
     position: fixed;
-    top: -100vh;
+    top: -150vh;
     z-index: 100;
     background-color: #16162d;
     border-bottom-right-radius: 100%;
